sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:12: error: ';' expected but 'else' found.
    else {
    ^AlgGnomeSort:22: error: Unmatched closing brace '}' ignored here
}
^